crates/slakio-tui/tests/snapshots/style_flows__styled_rail_overlay_focus_120x40.snap
---
source: crates/slakio-tui/tests/style_flows.rs
expression: screen_styled(&d)
---
╭───────────────────╮────────╮╭────────────────────────────────────────────────────────────────────────────────────────╮
    [acc 0..21] [bdr 21..120]
│▌A company     28  │        ││                                                                                        │
    [acc 0..1] [ws 1..2] [acc/sel B 2..11] [/sel 11..15] [on/err B 15..19] [/sel 19..20] [acc 20..21] [bdr 29..31] [bdr 119..120]
│▌B side         9  │        ││                                                                                        │
    [acc 0..1] [ws 1..2] [on/err B 16..19] [acc 20..21] [/cl 21..29] [bdr 29..31] [bdr 119..120]
│───────────────────│     3  ││                                                                                        │
    [acc 0..1] [bdr 1..20] [acc 20..21] [on/err B 25..28] [bdr 29..31] [bdr 119..120]
│▎H  Home           │        ││                                                                                        │
    [acc 0..1] [acc B 1..9] [acc 20..21] [bdr 29..31] [bdr 119..120]
│ D  DMs        16  │        ││                                                                                        │
    [acc 0..1] [acc B 1..2] [on/err B 15..19] [acc 20..21] [bdr 29..31] [bdr 119..120]
│ A  Activity   37  │        ││                                                                                        │
    [acc 0..1] [acc B 1..2] [on/err B 15..19] [acc 20..21] [bdr 29..31] [bdr 119..120]
│ F  Files          │        ││                                                                                        │
    [acc 0..1] [acc B 1..2] [acc 20..21] [bdr 29..31] [bdr 119..120]
│ L  Later          │red ext ││                                                                                        │
    [acc 0..1] [acc B 1..2] [acc 20..21] [dim 24..28] [bdr 29..31] [bdr 119..120]
│                   │ings    ││                                                                                        │
    [acc 0..1] [acc 20..21] [ B 21..25] [bdr 29..31] [bdr 119..120]
│                   │        ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │s       ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │        ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │        ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │ts      ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │ew      ││                         No conversation open                                           │
    [acc 0..1] [acc 20..21] [dim 21..23] [bdr 29..31] [ B 56..76] [bdr 119..120]
│                   │134     ││                         Pick one in the list and press Enter.                          │
    [acc 0..1] [acc 20..21] [bdr 29..31] [mut 56..93] [bdr 119..120]
│                   │8       ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │-162    ││                         Enter    Open                                                  │
    [acc 0..1] [acc 20..21] [bdr 29..31] [warm B 56..61] [bdr 119..120]
│                   │-33     ││                         Space h  Home                                                  │
    [acc 0..1] [acc 20..21] [bdr 29..31] [warm B 56..63] [bdr 119..120]
│                   │50      ││                         Space d  DMs                                                   │
    [acc 0..1] [acc 20..21] [bdr 29..31] [warm B 56..63] [bdr 119..120]
│                   │119     ││                         Ctrl+O   Back to the last one                                  │
    [acc 0..1] [acc 20..21] [bdr 29..31] [warm B 56..62] [bdr 119..120]
│                   │er-161  ││                         ?        Keyboard help                                         │
    [acc 0..1] [acc 20..21] [dim 21..27] [bdr 29..31] [warm B 56..57] [bdr 119..120]
│                   │er…  1  ││                         Ctrl+Q   Quit                                                  │
    [acc 0..1] [acc 20..21] [dim 21..24] [on/err B 25..28] [bdr 29..31] [warm B 56..62] [bdr 119..120]
│                   │ard-22  ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │ard-41  ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │-34     ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │-83     ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │142     ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │58      ││                                                                                        │
    [acc 0..1] [acc 20..21] [ B 21..23] [bdr 29..31] [bdr 119..120]
│                   │84      ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │199  2  ││                                                                                        │
    [acc 0..1] [acc 20..21] [ B 21..24] [on/err B 25..28] [bdr 29..31] [bdr 119..120]
│                   │39      ││                                                                                        │
    [acc 0..1] [acc 20..21] [dim 21..23] [bdr 29..31] [bdr 119..120]
│                   │5    1  ││                                                                                        │
    [acc 0..1] [acc 20..21] [ B 21..22] [on/err B 25..28] [bdr 29..31] [bdr 119..120]
│                   │e-16    ││                                                                                        │
    [acc 0..1] [acc 20..21] [ B 21..25] [bdr 29..31] [bdr 119..120]
│                   │e-168   ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │y-144   ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
│                   │g-82    ││                                                                                        │
    [acc 0..1] [acc 20..21] [bdr 29..31] [bdr 119..120]
╰───────────────────╯────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯
    [acc 0..21] [bdr 21..120]
 NORMAL  ▌A company › Home                  Enter show · j/k move · Esc back · ? help · Space more │  @37  DM 16 │ demo
    [on/acc B 0..8] [/surf 8..9] [ws/surf 9..10] [/surf 10..19] [dim/surf 19..22] [/surf 22..44] [/surf B 44..49] [mut/surf 49..54] [dim/surf 54..57] [/surf B 57..60] [mut/surf 60..65] [dim/surf 65..68] [/surf B 68..71] [mut/surf 71..76] [dim/surf 76..79] [/surf B 79..80] [mut/surf 80..85] [dim/surf 85..88] [/surf B 88..93] [mut/surf 93..98] [bdr/surf 98..101] [on/err B 101..106] [/surf 106..107] [/surf B 107..112] [bdr/surf 112..115] [warm/surf 115..119] [/surf 119..120]
